# restiny

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: build_exe.yaml  ci.yaml  data-fox-ci.yaml
data_fox/: __main__.py  app.py  consts.py  style.tcss  utils.py
data_fox/widgets/: __init__.py  custom_text_area.py  dynamic_fields.py  path_chooser.py
restiny/: __main__.py  consts.py  entities.py  enums.py  logger.py  utils.py
restiny/core/: app.py  request_area.py  response_area.py  url_area.py
restiny/data/: db.py  models.py  repos.py
restiny/data/sql/: 1_initial.sql  4_add_auth_presets_table.sql  4_add_text_area_theme_to_settings.sql  5_add_attach_cookies_to_requests.sql  6_add_editor_indent_to_settings.sql
restiny/ui/: app.py  collections_area.py  environments_screen.py  import_open_api_screen.py  request_area.py  response_area.py  top_bar_area.py  url_area.py
restiny/ui/screens/: __init__.py  auth_presets_screen.py  environments_screen.py  openapi_spec_import_screen.py  postman_collection_import_screen.py  postman_environment_import_screen.py  request_or_folder_screen.py  settings_screen.py
restiny/widgets/: __init__.py  collections_tree.py  confirm_prompt.py  custom_iinput.py  custom_text_area.py  dynamic_fields.py  password_input.py  path_chooser.py
