#############
## Package ##
#############
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "restiny"
dynamic = ["version"]
description = "A minimalist HTTP client, no bullshit"
authors = [{ name = "Kalebe Chimanski de Almeida", email = "kalebecalmeida@hotmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "textual>=6.2,<6.3",
  "textual[syntax]",
  "httpx>=0.28,<0.29",
  "pyperclip>=1.9,<1.10",
]

[project.scripts]
restiny = "restiny.__main__:main"

[tool.setuptools.dynamic]
version = { attr = "restiny.__about__.__version__" }

[tool.setuptools.packages.find]
include = ["restiny*"]

[tool.setuptools.package-data]
restiny = ["assets/**/*"]

##########
## Ruff ##
##########
[tool.ruff]
line-length = 79
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
ignore = ["E501", "B006"]

[tool.ruff.format]
quote-style = "single"
